#==============================================================
#  Name: RELEASE_NOTES
#
#  Rem:  This file describes release notes for
#        the ssa IOC Application.
#--------------------------------------------------------------

R1.2.14  06-Aug-2023  M. Dunning (mdunning)
    Remove SRF permit feature.  This was used for commissioning and is not needed any more.
    Update CA186 module summaries
    Add Off and Faulted counts to stats
    Increase callback queue size from 2000 to 5000 to prevent overflows
    Set GUN:GUNB:100:RFCTRL to 0 in gun/buncher PowerOffAll routines, which turns off RF before SSAs

R1.2.13  23-Aug-2023  M. Dunning (mdunning)
    Add more general drain voltage alarm; split off records into separate subs file
    Add common drive power records
    Upgrade support modules
    Update CA186 alarms & alarm summaries

R1.2.12  14-Aug-2023  M. Dunning (mdunning)
    Add alarm severities for DrainVoltRBV

R1.2.11  08-Aug-2023  M. Dunning (mdunning)
    Bug fix: In seq routine, ensure powerOn event flag is cleared.
        If not cleared, SSA would turn on when fault reset button was pushed.
    Prod IOCs: rhel6 -> rhel7
    Dev IOCs: Enable seq debug before seq routine is loaded

R1.2.10  25-Jul-2023  M. Dunning (mdunning)
    Update 7kW archive list

R1.2.9  15-Jun-2023  S. Hoobler (sonya)
    Update cmts IOC for Fermilab testing
    Add SSA on/off/reset help EDM displays

R1.2.8  07-Jun-2023  M. Dunning (mdunning)
    Add cmts IOC for Fermilab testing
    Make BKHASYN and SNCSEQ optional
    Fix asynRecord names
    Update screens
    Use EPICS_HOST_ARCH for IOC Makefiles

R1.2.7  16-Dec-2022  M. Dunning (mdunning)
    Add support for 186MHz 7kW SSA for HE gun
    CA1300 7kW: add two new registers for main cpu voltages

R1.2.6  19-Jul-2022  M. Dunning (mdunning)
    Increase drainVoltWait delay based on R&K's recommendation

R1.2.5  15-Jul-2022  M. Dunning (mdunning)
    Increase CA186 module-on retries
