@@ -17,6 +17,7 @@ SEQ_MODULE_VERSION=R2.2.4-1.2
 AUTOSAVE_MODULE_VERSION=R5.10-1.1.0
 CAPUTLOG_MODULE_VERSION=R4.0-1.0.0
 IOCADMIN_MODULE_VERSION=R3.1.16-1.3.2
+RKAMPGA_MODULE_VERSION=R1.0.0
 
 # ==========================================================
 # Define module paths using pattern
@@ -32,6 +33,7 @@ SNCSEQ=$(EPICS_MODULES)/seq/$(SEQ_MODULE_VERSION)
 AUTOSAVE=$(EPICS_MODULES)/autosave/$(AUTOSAVE_MODULE_VERSION)
 CAPUTLOG=$(EPICS_MODULES)/caPutLog/$(CAPUTLOG_MODULE_VERSION)
 IOCADMIN=$(EPICS_MODULES)/iocAdmin/$(IOCADMIN_MODULE_VERSION)
+RKAMPGA=$(EPICS_MODULES)/rkAmpGA/$(RKAMPGA_MODULE_VERSION)
 
 # =====================================================================
 # Set EPICS_BASE last so it appears last in the DB, DBD, INCLUDE, and LIB search paths
