@@ -5,6 +5,9 @@
 #        the ssa IOC Application.
 #--------------------------------------------------------------
 
+R1.2.15  14-Nov-2023  G. Brown (gwbrown)
+    Add small XTCAV SSA, R&K model GA11424BW200, using rkAmpGA module.
+
 R1.2.14  06-Aug-2023  M. Dunning (mdunning)
     Remove SRF permit feature.  This was used for commissioning and is not needed any more.
     Update CA186 module summaries
